<resources>
    <string name="app_name">Paypr</string>
    <string name="paypr_caps">&#160;AYPR&#160;</string>
    <string name="check_internet_connection">Please check your internet connection and try again.</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">Sign In</string>
    <string name="next">Next</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="enter_email">Enter Your Email</string>
    <string name="enter_valid_email">Enter valid email id</string>
    <string name="enter_password">Enter Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="or">or</string>
    <string name="error">error</string>
    <string name="server_not_responding">Server is not responding, try again later!</string>
    <string name="some_technical_issue">Some technical issue, try again after some time.</string>
    <string name="something_went_wrong">Something went wrong, try again later!</string>
    <string name="some_internal_error">Some technical error, try later!</string>
    <string name="service_error">Service Error</string>
    <string name="ok">OK</string>
    <string name="success">Success</string>
    <string name="cancel">Cancel</string>
    <string name="image">Image</string>
    <string name="update_now">Update Now</string>
    <string name="update_later">Update Later</string>
    <string name="new_update_available">New update available.</string>
    <string name="login_error">Login Error</string>
    <string name="version_error">Version Error</string>
    <string name="enter_valid_mobile_number">Enter Valid Mobile Number</string>
    <string name="forgot_your_password_please_input_your_email_address">Forgot your password?\nPlease input your registered mobile number</string>
    <string name="enter_otp_title_msg">Enter the 6 digit OTP sent on your registered mobile number</string>
    <string name="password_eight_characters">Password must have at least 8 characters</string>
    <string name="passwords_do_not_match">Passwords Don\'t Match</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="welcome_to_paypr">Welcome to Paypr!</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="mobile_number_">Mobile number</string>
    <string name="x">X</string>
    <string name="continue_">Continue</string>
    <string name="sign_up_error">Sign Up Error</string>
    <string name="please_wait">Please wait..</string>
    <string name="wrong_otp_msg">The OTP you entered could not be authenticated. Please try again.</string>
    <string name="plz_enter_otp">Please enter OTP.</string>
    <string name="by_signing_up_you_are_agreeing_to_our">By signing up you are agreeing to our</string>
    <string name="terms_and_conditions"><u>Terms and conditions</u></string>
    <string name="user_agreement"><u>User Agreement and Privacy Statement</u></string>
    <string name="your_account_has_been_created">Your account has been created successfully</string>
    <string name="terms_and_conditions_">Terms and conditions</string>
    <string name="terms_and_conditions_text">We reserve the right, at our sole discretion, to change, modify or otherwise alter these Terms and Conditions at any time. Unless otherwise indicated, amendments will become effective immediately. Please review these Terms and Conditions periodically. Your continued use of the Site following the posting of changes and/or modifications will constitute your acceptance of the revised Terms and Conditions and the reasonableness of these standards for notice of changes. For your information, this page was last updated as of the date at the top of these terms and conditions.</string>
    <string name="disagree">Disagree</string>
    <string name="agree">Agree</string>
    <string name="password_encrypt_error">Error In Encrypting Password</string>
    <string name="transactions">Transactions</string>
    <string name="my_transaction">My Transaction</string>
    <string name="balance_refreshed">Your balance has been updated.</string>
    <string name="transfers">Transfers</string>
    <string name="retails">Merchants</string>
    <string name="payments">Payments</string>
    <string name="profile">Profile</string>
    <string name="transaction_history">Transaction History</string>
    <string name="retailers_location">Merchants locations</string>
    <string name="merchants">Merchants</string>
    <string name="request_money">Request money</string>
    <string name="done_caps">DONE</string>
    <string name="contacts">Contacts</string>
    <string name="no_contacts_available">No contacts available!</string>
    <string name="permission_must_grant_contact">Permission must be granted in order to display contacts information.</string>
    <string name="no_contact_selected">No contact selected, please select a contact then proceed.</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="enter_amount">Enter amount</string>
    <string name="enter_amount_init_caps">Enter Amount</string>
    <string name="send">Send</string>
    <string name="send_money">Send money</string>
    <string name="send_payment">Send payment</string>
    <string name="request_payment">Request payment</string>
    <string name="enter_valid_amount">Enter valid amount</string>
    <string name="balance">Balance</string>
    <string name="recent_transactions">Recent transactions</string>
    <string name="you_have_not_done_any_transactions_lately">You have not made any\ntransactions lately.</string>
    <string name="problem_fetching_recent_transactions">There was problem fetching your recent transactions. Please try back in sometime.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_out">Sign out</string>
    <string name="are_you_sure_that_you_want_to_sign_out">Are you sure that you want\nto sign out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="personal_data">Personal data</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="no_transactions_found">No transactions found in given date range.</string>
    <string name="save_changes">Save changes</string>
    <string name="password_must_be_of_min_eight_digits">Password must be of minimum 8 characters.</string>
    <string name="old_and_new_password_cannot_be_same">Current password and new password cannot be same</string>
    <string name="enter_current_password">Enter current password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="enter_new_password_">Enter New Password</string>
    <string name="re_enter_current_password">Re-enter current password</string>
    <string name="change_password">Change password</string>
    <string name="change_password_error">Change password error</string>
    <string name="password_changed_successfully">Password Changed Successfully</string>
    <string name="sort_by">Sort by:</string>
    <string name="cash_out">Cash Out</string>
    <string name="cash_in">Cash In</string>
    <string name="winning">Winning</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="deposit">Deposit</string>
    <string name="wager">Wager</string>
    <string name="all">All</string>
    <string name="version">Version</string>
    <string name="allow_permission">You need to allow access permissions!</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter Your Full Name</string>
    <string name="name_cannot_be_empty">Name can\'t be empty</string>
    <string name="invalid_mobile_number">Invalid mobile number</string>
    <string name="change_name">Change name</string>
    <string name="change_email">Change email</string>
    <string name="profile_updated_successfully">Profile updated successfully</string>
    <string name="display_qr">Display QR</string>
    <string name="display_your_qr_code_to_connect">Display your QR code</string>
    <string name="invalid_qr_scanned">Invalid QR Scanned</string>
    <string name="get_started">Get Started</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="let_s_get_started_with_paypr">Get started with <b>PAYPR</b></string>
    <string name="enter_your_details_below">Enter your details below</string>
    <string name="generate_otp">Generate Code</string>
    <string name="optional">(Optional)</string>
    <string name="add_amount_to_your_qr">Add Amount To Your QR Code</string>
    <string name="add">Add</string>
    <string name="remove_amount">Remove Amount</string>
    <string name="password_policy">Password Policy:</string>
    <string name="password_rules_new">Password should be 8–16 characters in length, consisting of characters or digits only.</string>
    <string name="dot"><b>•</b></string>
    <string name="default_notification_channel_id">Paypr</string>
    <string name="wallet">Wallet</string>
    <string name="account">account</string>
    <string name="last_login">Last Login:</string>
    <string name="no_merchant_found_nearby">No merchant found nearby.</string>
    <string name="maps_not_installed">Service Unavailable: Google Maps not installed on this device.</string>
    <string name="location_permission_denied">Location permission denied.</string>
    <string name="gps_seems_off">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="gps_is_disabled">GPS is disabled.</string>
    <string name="setting">Setting</string>
    <string name="need_to_allow_location_permission">You need to allow Location Permission to use this service.</string>
    <string name="unable_to_get_your_location">Unable to get your location.\nTap to retry.</string>
    <string name="find_merchants_within">Find merchants within</string>
    <string name="call_merchant">Call merchant</string>
    <string name="get_direction">Get direction</string>
    <string name="full_name">Full Name</string>
    <string name="send_or_receive_money">Send money to your contacts</string>
    <string name="find_merchant_who_accepts_paypr">Find a merchant who accepts PAYPR</string>
    <string name="browse_your_recent_transactions">Browse your recent transactions</string>
    <string name="forgot_password_error">Forgot Password Error</string>
    <string name="enter_code">Enter Code</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="resend_code"><u>Resend Code</u></string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_valid_code">Enter Valid Code</string>
    <string name="re_enter_new_password">Re-enter New Password</string>
    <string name="verification_code_successfully_sent_to">Verification code successfully sent to</string>
    <string name="_10mi">10mi</string>
    <string name="_15mi">15mi</string>
    <string name="_20mi">20mi</string>
    <string name="_25mi">25mi</string>
    <string name="_30mi">30mi</string>
    <string name="_35mi">35mi</string>
    <string name="_70mi">70mi</string>
    <string name="select_an_option">Select An Option</string>
    <string name="open_camera">Open Camera</string>
    <string name="choose_from_gallery">Choose From Gallery</string>
    <string name="failed_to_upload_image">Failed To Upload Image, try again later!</string>
    <string name="image_uploaded_successfully">Image Uploaded Successfully</string>
</resources>